--- a/Frontend project/Contact us/style/style.css
+++ b/Frontend project/Contact us/style/style.css
@@ -427,3 +427,102 @@ padding-left: 10px;
     
     }
 
+@media only screen and (max-width:800px){
+    .form{
+        width: 100%;
+        height: 90%;
+        
+    }
+}
+
+
+
+@media only screen and (max-width:800px){
+    .contact-wrap{
+        width: 90%;
+        height: 90%;
+    }
+}
+
+@media only screen and (max-width:800px){
+    .p1{
+        width: 90%;
+        height: 90%;
+    }
+}
+
+@media only screen and (max-width:800px){
+    .p2{
+        width: 90%;
+        height: 90%;
+    }
+}
+
+@media only screen and (max-width:800px){
+    .p3{
+        width: 90%;
+        height: 90%;
+    }
+}
+
+@media only screen and (max-width:800px){
+    .footer{
+        width: 90%;
+        height: 90%;
+    }
+}
+
+@media only screen and (max-width:800px){
+    .copyright-wrapper{
+        width: 90%;
+        height: 90%;
+    }
+}
+
+@media only screen and (max-width:800px){
+    .footer-col{
+        width: 90%;
+        height: 90%;
+    }
+}
+
+@media only screen and (max-width:800px){
+    .footer-col{
+        width: 90%;
+        height: 90%;
+    }
+}
+
+@media only screen and (max-width:800px){
+    .footer-container{
+        width: 90%;
+        height: 90%;
+    }
+}
+@media only screen and (max-width:800px){
+    .logo-footer{
+        width: 90%;
+        height: 90%;
+    }
+}
+
+@media only screen and (max-width:800px){
+    .btn{
+        width: 90%;
+        height: 90%;
+    }
+}
+
+@media only screen and (max-width:800px){
+    .bottom{
+        width: 90%;
+        height: 90%;
+    }
+}
+
+@media only screen and (max-width:800px){
+    .bottom-txt{
+        width: 90%;
+        height: 90%;
+    }
+}
